Added a close button to the templates & profiles dialogue. Updated the CMDI schema location and namespace syntax and updated the xpath accordingly. Corrected field paths that replace the use of the 'domid' attributes for saving changes to the dom. Updated the added field highlight to work with IMDI. Enabled deleting of CMDI addable fields in the table. Prevented Cmdi headers and resources being offered as addable sub nodes. Prevented CMDI components with only one element being shown as a sub node. Added schema check for local schema files. Prevented cacheing when validating via a local schema file. Stripped archive handles for when inserting sections from favourites. Updated the schema check to read (resolved or unresolved) xsi:noNamespaceSchemaLocation as well as the expected xsi:schemaLocation. Updated template reader to read (resolved or unresolved) xsi:noNamespaceSchemaLocation as well as the expected xsi:schemaLocation. Moved the metadata file construction into a separate class. Simplified the add metadata sub node process. Corrected the components offered to be added by the context menu for some Clarin components. Added insert from favourites for Clarin nodes. Added schema validation result to the tool tip. Added indication of read only status to the tool tip. Added indication of the schema validation result to the tree nodes by way of text colour as used in the table cells. Prevented editing a cell in the table if the file is currently loading or not in the cache. Updated the adding of Clarin links now that the imdi api id attributes are gone (xpath issue). Updated the creation of CMDI files so that min bounds attributes are not inserted. Updated the creation of CMDI files so that nodes with a positive min bounds will get the multiple nodes if required. Labeled all threads. Added the sign language corpora as one if the defaults. Corrected an error in the Catalogue template. Updated the sign language template and its components.

--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.SignLanguageSession.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.SignLanguageSession.xml
@@ -2,8 +2,8 @@
 <METATRANSCRIPT 
 	Date="2003-09-23" 
 	FormatId="IMDI 3.03" 
-	Originator="" 
-	Type="Sign-Language Session"
+	Originator="Sign Language"
+	Type="SESSION"
 	Version="0"
 	xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
@@ -11,7 +11,7 @@
     <Session>
         <Name>Sign-Language Session</Name>
         <Title/>
-        <Date/>
+    <Date>Unspecified</Date>
         <Description LanguageId="" Link=""/>
         <MDGroup>
             <Location>
