--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.xml
@@ -2,7 +2,7 @@
 <METATRANSCRIPT 
 	Date="2003-09-23" 
 	FormatId="IMDI 3.03" 
-	Originator="" 
+	Originator=""
 	Type="SESSION" 
 	Version="0"
 	xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" 
@@ -64,7 +64,7 @@
         <ResourceLink></ResourceLink>
         <Access>
           <Availability/>
-          <Date>Unspecified</Date>
+          <Date></Date>
           <Owner/>
           <Publisher/>
           <Contact>
