Resolved the issue re-importing nodes when the storage location is non standard. Replaced indicache with ArbilWorkingFiles as default when no existing directory is found. Replaced change cache directory menu item with change local storage directory menu item. Added text find and replace to the table. Added find replace into the context menu. Added the insertion of dummy data into clarin nodes when required. Added profile preview class. Added the display of info links in the tree and the table or previewed when html/txt. Corrected the defaults in the catalogue template.

--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.xml
@@ -32,10 +32,10 @@
             <Image/>
         </Format>
         <Quality>
-            <Text/>
-            <Audio/>
-            <Video/>
-            <Image/>
+            <Text>Unspecified</Text>
+            <Audio>Unspecified</Audio>
+            <Video>Unspecified</Video>
+            <Image>Unspecified</Image>
         </Quality>
         <SmallestAnnotationUnit/>
         <Applications/>
