--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Catalogue.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
-<METATRANSCRIPT xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Date="2009-07-09" FormatId="IMDI 3.0" Originator="admin" Type="CATALOGUE" Version="12" xsi:schemaLocation="http://www.mpi.nl/IMDI/Schema/IMDI ./IMDI_3.0.xsd">
+<METATRANSCRIPT xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Date="2009-07-09" FormatId="IMDI 3.0" Originator="" Type="CATALOGUE" Version="12" xsi:schemaLocation="http://www.mpi.nl/IMDI/Schema/IMDI ./IMDI_3.0.xsd">
     <History/>
     <Catalogue>
         <Name/>
@@ -32,10 +32,10 @@
             <Image/>
         </Format>
         <Quality>
-            <Text/>
-            <Audio/>
-            <Video/>
-            <Image/>
+            <Text>Unspecified</Text>
+            <Audio>Unspecified</Audio>
+            <Video>Unspecified</Video>
+            <Image>Unspecified</Image>
         </Quality>
         <SmallestAnnotationUnit/>
         <Applications/>
