Corrected an issue where changes were not being saved when components were added or removed. Corrected an issue creating templates and copying files from the jar. Added a place holder template component added to new templates when they are created. Corrected an issue adding main nodes from custom templates. Prevented clarin profile xsd files that are already on the local file system from being cached. Added more detail to the error log. Added the Arbil icon and application title to the dock for the mac installer version. Added a build target to publish the applet and webstart versions into the shibothised server directory. Added Unknown and Unspecified as valid values for date fields in the default template. Added a template for media file key.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -127,6 +127,7 @@
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Languages.Language(x).Description.xml" DisplayName="Content Language Description" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Keys.Key.xml" DisplayName="Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile.xml" DisplayName="MediaFile" />
+        <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile(x).Keys.Key.xml" DisplayName="MediaFile Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Source(x).Keys.Key.xml" DisplayName="Source Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Source.xml" DisplayName="Source" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.WrittenResource(x).Keys.Key.xml" DisplayName="WrittenResource Key" />
