Updated the way the trees are sorted to prevent rendering issues. Corrected an issue in the add menu caused by a user selected clarin profile disappearing from the server list. Corrected an issue where changes were not being saved when components were added or removed. Corrected an issue creating templates and copying files from the jar. Added a place holder template component added to new templates when they are created. Corrected an issue adding main nodes from custom templates. Prevented clarin profile xsd files that are already on the local file system from being cached. Added more detail to the error log. Added the Arbil icon and application title to the dock for the mac installer version. Added a build target to publish the applet and webstart versions into the shibothised server directory. Added Unknown and Unspecified as valid values for date fields in the default template. Added a template for media file key. Added a php page to list all the historical versions of Arbil for interested users. Added thread groups to maintain the live threads and restart then in the event of interruptions such as occur in the applet. Created a new applet class to replace the out of date version. Added an export option to make the output filenames lamus compatible. Suppressed the file/exit menu item from the applet version. Created an applet template for lux17. Limited the dom.id cleanup to only be performed on imdi files. Corrected spelling in a dialogue text. Modified the metadata loading thread to be more robust. Added a logout button to the applet. Corrected issue deselecting local xsd templates in the template dialogue. Corrected an issue reading the template type from IMDI vs CMDI files. Update windows installer paths. Created new branch for arbil 2.1.x. Added a staging version of Arbil.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -52,8 +52,8 @@
     </GenreSubgenres>
     <FieldConstraints>
         <comment>The fields listed here will be required to match the regex constraint and will be highlighted in the application if they do not</comment>
-        <FieldConstraint FieldPath=".*\.Date" Constraint="([0-9][0-9][0-9][0-9])((-[0-1][0-9])(-[0-3][0-9])?)?"/>
-        <FieldConstraint FieldPath=".*\.BirthDate" Constraint="([0-9][0-9][0-9][0-9])((-[0-1][0-9])(-[0-3][0-9])?)?"/>
+        <FieldConstraint FieldPath=".*\.Date" Constraint="([0-9][0-9][0-9][0-9])((-[0-1][0-9])(-[0-3][0-9])?)?|Unknown|Unspecified"/>
+        <FieldConstraint FieldPath=".*\.BirthDate" Constraint="([0-9][0-9][0-9][0-9])((-[0-1][0-9])(-[0-3][0-9])?)?|Unknown|Unspecified"/>
         <FieldConstraint FieldPath=".*\.Email" Constraint=".+@.+"/>
         <FieldConstraint FieldPath=".*\(x\).Quality" Constraint="[1-5]" />
         <FieldConstraint FieldPath=".*\(x\).TimePosition.Start" Constraint="[0-9][0-9]:[0-9][0-9]:[0-9][0-9]:?[0-9]*|Unknown|Unspecified" />
@@ -124,6 +124,7 @@
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Languages.Language(x).Description.xml" DisplayName="Content Language Description" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Keys.Key.xml" DisplayName="Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile.xml" DisplayName="MediaFile" />
+        <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile(x).Keys.Key.xml" DisplayName="MediaFile Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Source(x).Keys.Key.xml" DisplayName="Source Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Source.xml" DisplayName="Source" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.WrittenResource(x).Keys.Key.xml" DisplayName="WrittenResource Key" />
