--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -386,7 +386,8 @@
         <TemplateComponent FileName="METATRANSCRIPT.Corpus.Description.xml" DisplayName="Description" />
         <!--<TemplateComponent FileName="METATRANSCRIPT.Corpus.xml" DisplayName="Corpus" />-->
         <TemplateComponent FileName="METATRANSCRIPT.Session.Description.xml" DisplayName="Description" />
-        <TemplateComponent FileName="METATRANSCRIPT.Session.References.Description.xml" DisplayName="References.Description" />
+        <TemplateComponent FileName="METATRANSCRIPT.Session.References.Description.xml" DisplayName="References Description" />
+        <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Actors.Description.xml" DisplayName="Actors Description" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Actors.Actor(x).Description.xml" DisplayName="Actor Description" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Actors.Actor(x).Keys.Key.xml" DisplayName="Actor Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Actors.Actor(x).Languages.Language.xml" DisplayName="Actor Language" />
@@ -395,7 +396,7 @@
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Languages.Language.xml" DisplayName="Content Language" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Languages.Language(x).Description.xml" DisplayName="Content Language Description" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Keys.Key.xml" DisplayName="Key" />
-        <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Anonyms.xml" DisplayName="Anonyms" /> 
+        <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Anonyms.xml" DisplayName="Anonyms" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile.xml" DisplayName="MediaFile" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile(x).Keys.Key.xml" DisplayName="MediaFile Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Source(x).Keys.Key.xml" DisplayName="Source Key" />
@@ -765,13 +766,13 @@
         <FieldUsage FieldPath=".METATRANSCRIPT.Catalogue.Keys.Key" FieldDescription="" />-->
     </FieldUsageDescriptions>
     <PreferredTreeNodeNameFields>
-       <comment>The fields that will be used to name the node in the tree if the field contains a value. The first found value will be used, so the order of this list determines their preference of use in the tree.</comment>
-       <TreeNodeNameField FieldsShortName="Name" />
-       <TreeNodeNameField FieldsShortName="Id" />
-       <TreeNodeNameField FieldsShortName="Address" />
-       <TreeNodeNameField FieldsShortName="Region" />
-       <TreeNodeNameField FieldsShortName="Country" />
-       <TreeNodeNameField FieldsShortName="Continent" />
+        <comment>The fields that will be used to name the node in the tree if the field contains a value. The first found value will be used, so the order of this list determines their preference of use in the tree.</comment>
+        <TreeNodeNameField FieldsShortName="Name" />
+        <TreeNodeNameField FieldsShortName="Id" />
+        <TreeNodeNameField FieldsShortName="Address" />
+        <TreeNodeNameField FieldsShortName="Region" />
+        <TreeNodeNameField FieldsShortName="Country" />
+        <TreeNodeNameField FieldsShortName="Continent" />
     </PreferredTreeNodeNameFields>
 
 </template>
